<resources>
    <string name="app_name">PurpleWaveTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="record_name">Name</string>
    <string name="record_description">Description</string>
    <string name="records">Records</string>
    <string name="floating_btn_content_description">floating_btn</string>
    <string name="record_details">Record Details</string>
    <string name="img_content">img_content</string>
    <string name="add_record">Add Record</string>
</resources>